--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
-    "dev": "next dev --turbopack --show-all",
+    "dev": "next dev --turbopack",
     "start": "next start",
     "lint": "next lint"
   },
